Archive2/3a/51f8eacc5e3f50/output
main.cpp: In function 'int main()':
main.cpp:12:1: error: 'cout' was not declared in this scope
 cout<<x[i][j]<<"\t";
 ^
main.cpp:12:1: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:13:1: error: 'cout' was not declared in this scope
 cout<<"\n";
 ^
main.cpp:13:1: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
